; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/dvb/dvb-usb/extr_dtt200u-fe.c_dtt200u_fe_read_status.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/dvb/dvb-usb/extr_dtt200u-fe.c_dtt200u_fe_read_status.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dvb_frontend = type { %struct.dtt200u_fe_state* }
%struct.dtt200u_fe_state = type { i32 }

@GET_TUNE_STATUS = common dso_local global i32 0, align 4
@FE_HAS_SIGNAL = common dso_local global i32 0, align 4
@FE_HAS_CARRIER = common dso_local global i32 0, align 4
@FE_HAS_VITERBI = common dso_local global i32 0, align 4
@FE_HAS_SYNC = common dso_local global i32 0, align 4
@FE_HAS_LOCK = common dso_local global i32 0, align 4
@FE_TIMEDOUT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.dvb_frontend*, i32*)* @dtt200u_fe_read_status to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @dtt200u_fe_read_status(%struct.dvb_frontend* %0, i32* %1) #0 {
  %3 = alloca %struct.dvb_frontend*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca %struct.dtt200u_fe_state*, align 8
  %6 = alloca i32, align 4
  %7 = alloca [3 x i32], align 4
  store %struct.dvb_frontend* %0, %struct.dvb_frontend** %3, align 8
  store i32* %1, i32** %4, align 8
  %8 = load %struct.dvb_frontend*, %struct.dvb_frontend** %3, align 8
  %9 = getelementptr inbounds %struct.dvb_frontend, %struct.dvb_frontend* %8, i32 0, i32 0
  %10 = load %struct.dtt200u_fe_state*, %struct.dtt200u_fe_state** %9, align 8
  store %struct.dtt200u_fe_state* %10, %struct.dtt200u_fe_state** %5, align 8
  %11 = load i32, i32* @GET_TUNE_STATUS, align 4
  store i32 %11, i32* %6, align 4
  %12 = load %struct.dtt200u_fe_state*, %struct.dtt200u_fe_state** %5, align 8
  %13 = getelementptr inbounds %struct.dtt200u_fe_state, %struct.dtt200u_fe_state* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = getelementptr inbounds [3 x i32], [3 x i32]* %7, i64 0, i64 0
  %16 = call i32 @dvb_usb_generic_rw(i32 %14, i32* %6, i32 1, i32* %15, i32 3, i32 0)
  %17 = getelementptr inbounds [3 x i32], [3 x i32]* %7, i64 0, i64 0
  %18 = load i32, i32* %17, align 4
  switch i32 %18, label %33 [
    i32 1, label %19
    i32 0, label %30
    i32 2, label %34
  ]

19:                                               ; preds = %2
  %20 = load i32, i32* @FE_HAS_SIGNAL, align 4
  %21 = load i32, i32* @FE_HAS_CARRIER, align 4
  %22 = or i32 %20, %21
  %23 = load i32, i32* @FE_HAS_VITERBI, align 4
  %24 = or i32 %22, %23
  %25 = load i32, i32* @FE_HAS_SYNC, align 4
  %26 = or i32 %24, %25
  %27 = load i32, i32* @FE_HAS_LOCK, align 4
  %28 = or i32 %26, %27
  %29 = load i32*, i32** %4, align 8
  store i32 %28, i32* %29, align 4
  br label %36

30:                                               ; preds = %2
  %31 = load i32, i32* @FE_TIMEDOUT, align 4
  %32 = load i32*, i32** %4, align 8
  store i32 %31, i32* %32, align 4
  br label %36

33:                                               ; preds = %2
  br label %34

34:                                               ; preds = %2, %33
  %35 = load i32*, i32** %4, align 8
  store i32 0, i32* %35, align 4
  br label %36

36:                                               ; preds = %34, %30, %19
  ret i32 0
}

declare dso_local i32 @dvb_usb_generic_rw(i32, i32*, i32, i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
